# bygg

./: .gitignore  .mise.toml  .python-versions  .tool-versions  Byggfile.toml  Byggfile.yml  LICENSE  README.md  Vagrantfile  Vagrantsetup.sh  bootstrap.py  bootstrap.sh  mypy.py  mypy.sh  noxfile.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: code_quality.yml  pypi_publish.yml  run_tests.yml
docs/: OtherSystems.md  Usage.md  Why.md
examples/checks/: Byggfile.toml  Byggfile.yml
examples/environments/: .gitignore  Byggfile.py  Byggfile.toml  Byggfile.yml  Byggfile1.py  Byggfile2.py  requirements2.txt
examples/failing_jobs/: Byggfile.toml  Byggfile.yml
examples/only_python/: Byggfile.py
examples/parametric/: Byggfile.py  Byggfile.toml  Byggfile.yml  README.md
examples/taskrunner/: .gitignore  Byggfile.toml  Byggfile.yml
examples/trivial/: .gitignore  Byggfile.py  Byggfile.toml  Byggfile.yml  input1.txt
examples/trivial/more_things/: MoreActions.py
examples/venv_and_pre/: Byggfile.yml  requirements-dev.txt
schemas/: Byggfile_schema.json  Byggfile_yml_schema.json
src/bygg/: __init__.py  action.py  apply_configuration.py  argument_unparsing.py  cache.py  common_types.py  completions.py  configuration.py  dag.py  digest.py  job_output.py  logging.py  main.py  output.py  runner.py  scaffolding.py  scheduler.py  status_display.py  system_helpers.py  tree.py  util.py
src/bygg/cmd/: apply_configuration.py  argument_parsing.py  argument_unparsing.py  build_clean.py  completions.py  configuration.py  datastructures.py  dispatcher.py  environments.py  list_actions.py  maintenance.py  render_tree.py  templates.py  tree.py  watch.py
src/bygg/core/: action.py  cache.py  common_types.py  dag.py  digest.py  job.py  runner.py  scheduler.py
src/bygg/output/: job_output.py  output.py  status_display.py
src/bygg/templates/: README.md
src/bygg/templates/standard/: Byggfile.py  description.txt
src/bygg/templates/taskrunner/: description.txt
src/bygg/util/: __init__.py  git.py  util.py
templates/standard/: Byggfile.yml
templates/standard/Byggfiles/: actions.py
testcases/action_set/: Byggfile.py
testcases/action_set/files/: b.txt  c.txt
testcases/restart_build/: .gitignore  Byggfile.py  Byggfile.toml
testcases/trim/: .gitignore  Byggfile.py
testcases/trim/files/: a.txt
tests/: conftest.py  test_action.py  test_argument_unparsing.py  test_cache.py  test_completions.py  test_digest.py  test_job_output.py  test_main.py  test_render_tree.py  test_scheduler.py  test_system_helpers.py  test_testcases.py  test_tree.py  test_utils.py
tests/__snapshots__/: test_completions.ambr  test_job_output.ambr  test_main.ambr  test_render_tree.ambr  test_system_helpers.ambr  test_testcases.ambr  test_tree.ambr
