[build-system]
requires = ["hatchling", "hatch-requirements-txt", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project]
name = "bygg"
dynamic = ["dependencies", "version"]

# Replace the line above with the next two lines to use a static version number, e.g. if you don't
# have the full git repo available:

# dynamic = ["dependencies"]
# version = "0.0.0.dev0"

authors = [{ name = "Rikard Gillemyr", email = "rikard.gillemyr@gmail.com" }]
description = "A small build system"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
bygg = "bygg.main:main"

[project.urls]
"Homepage" = "https://github.com/rikardg/bygg"
"Bug Tracker" = "https://github.com/rikardg/bygg/issues"

[tool.pyright]
include = ["src/bygg", "tests"]

[tool.pytest.ini_options]
addopts = ["-vv", "--import-mode=importlib", "tests/", "--snapshot-warn-unused"]
markers = [
  "digest: Tests for digest functionality.",
  "scheduler: Tests for the scheduler.",
  "help: Tests for the help functionality.",
]

[tool.ruff]
exclude = ["_version.py"]

[tool.ruff.lint]
extend-select = ["I", "UP006"]
ignore = ["E501"]

[tool.ruff.lint.isort]
order-by-type = true
force-sort-within-sections = true

[tool.uv]
reinstall-package = ["bygg"]
